--- a/dms-web-app/package.json
+++ b/dms-web-app/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.7",
+    "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "css-loader": "^6.8.1",
@@ -30,6 +31,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-router-dom": "6.11.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "rimraf": "^5.0.1",
@@ -65,9 +67,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react-router-dom": "^5.3.3",
-    "react-router-dom": "^6.14.1"
   }
 }
